jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: 
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
        labels:
          app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - image: lscr.io/linuxserver/jellyfin:10.8.10
          name: jellyfin
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /storage
              name: media
      restartPolicy: Always
      volumes:
        - name: config
          nfs:
            server: 10.0.3.3
            path: "/mnt/storage/service/jellyfin"
        - name: media
          nfs:
            server: 10.0.3.3
            path: "/mnt/storage/media"
