jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  jellyfin
  namespace: default
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  type:  ClusterIP
  ports:
  - name:  http
    port:  8096
    protocol: TCP
